# install-directives

./: .bumpversion.cfg  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
python_install_directives/: __main__.py  api.py
zetuptools/: __init__.py  __main__.py  api.py
