[metadata]
name = zetuptools
version = 0.0.0
author = Zeke Marffy
author_email = zmarffy@me.com
home_page = https://github.com/zmarffy/zetuptools
description = "Useful for doing post-install/uninstall things"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any

[options.entry_points]
console_scripts =
    install-directives = zetuptools.__main__:_entry